[package]
name = "pi3-covid-monitor-bay-area"
version = "0.1.0"
authors = ["Petr Kosikhin <petr.kosikhin@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.11"

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["ttf"]
